2011-01-31  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.5.0.

	* build: Building mkvtoolnix now requires libebml v1.2.0 and
	libmatroska v1.1.0 or later.

	* build: enhancement: mkvtoolnix now includes libebml and
	libmatroska. The configure script will use them if either no
	installed versions of them is found or if the installed version is
	too old.

2011-01-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed an infinite loop when reading program
	stream maps in MPEG program streams. Part of a fix for bug 589.

2011-01-21  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: new feature: Added an option "--track-info" (short:
	"-t") that displays one-line statistics about each track at the
	end of the output. The statistics include the track's total size,
	duration, approximate bitrate and number of packets/frames.

	* mkvinfo: bug fix: The hexdump mode was accessing invalid memory
	if the data to dump was shorter than 16 bytes. It was also
	outputting the values as characters instead of hexadecimal
	numbers. Patch by ykar@list.ru. Fix for bug 591.

2011-01-20  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: enhancement: The output file name extension is
	automatically set to ".mk3d" if the stereo mode parameter for any
	video track is changed to anything else than "mono" or the default
	value.

	* mmg: enhancement: Added ".mk3d" to the list of known file name
	extensions for Matroska files.

	* mkvmerge, mmg: enhancement: Updated the "stereo mode" parameter
	to match the current Matroska specifications.

2010-12-26  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: If mkvmerge encounters invalid UTF-8
	strings in certain files or command line arguments then those
	strings will simply be cut short. Before mkvmerge was exiting with
	an error ("Invalid UTF-8 sequence encountered").

	* all: new feature: Added online update checks. The command line
	tools know a new parameter "--check-for-updates". mmg has a new