@@ -74,6 +74,7 @@ DEBUG_CFLAGS = @DEBUG_CFLAGS@
 DOCBOOK_MANPAGES_STYLESHEET = @DOCBOOK_MANPAGES_STYLESHEET@
 DOCBOOK_ROOT = @DOCBOOK_ROOT@
 EBML_CFLAGS = @EBML_CFLAGS@
+EBML_LDFLAGS = @EBML_LDFLAGS@
 EBML_LIBS = @EBML_LIBS@
 EBML_MATROSKA_INTERNAL = @EBML_MATROSKA_INTERNAL@
 EGREP = @EGREP@
@@ -88,6 +89,7 @@ LIBINTL_LIBS = @LIBINTL_LIBS@
 LZO_LIBS = @LZO_LIBS@
 MAGIC_LIBS = @MAGIC_LIBS@
 MATROSKA_CFLAGS = @MATROSKA_CFLAGS@
+MATROSKA_LDFLAGS = @MATROSKA_LDFLAGS@
 MATROSKA_LIBS = @MATROSKA_LIBS@
 MINGW_GUIAPP = @MINGW_GUIAPP@
 MINGW_LIBS = @MINGW_LIBS@
